<resources>
    <string name="app_name">Foodish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_please_enter_user_name">Please enter username</string>
    <string name="error_please_enter_password">Please enter password</string>
    <string name="dashboard">dashboard</string>

    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="foodish">foodish..</string>
    <string name="search_elements">search elements</string>
    <string name="veg">VEG</string>
    <string name="non_veg">NON VEG</string>
    <string name="dessert">DESSERT</string>
    <string name="cool_drinks">COOL DRINKS</string>
    <string name="trending">Trending</string>
    <string name="lets_go_to_food_shop">Lets go to food shop</string>
    <string name="no_breeds_found">no breeds found</string>
    <string name="nectar_foods">Nectar foods.</string>
    <string name="order_from_anywhere">Order from anywhere</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
</resources>