<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.foodish.modules.login.ui.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background_color"
        tools:context=".modules.login.ui.ui.login.LoginActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="@dimen/padding_40"
            android:layout_marginEnd="@dimen/padding_8"
            android:text="@string/nectar_foods"
            android:textSize="96px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginEnd="@dimen/padding_8"
            android:text="@string/order_from_anywhere"
            android:textSize="32px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="869px"
            android:layout_height="710px"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/padding_8"
            android:background="@drawable/ic_illustration_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/padding_8"
            android:background="@drawable/bg_txt_username"
            android:hint="@string/username"
            android:paddingLeft="@dimen/padding_60"
            android:text="@={loginViewModel.userName}"
            android:textSize="40px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginEnd="@dimen/padding_8"
            android:background="@drawable/bg_txt_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_60"
            android:textSize="40px"
            android:text="@={loginViewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="@dimen/padding_20"
            android:layout_marginEnd="@dimen/padding_8"
            android:text="@string/go"
            android:onClick="@{()->loginViewModel.validate()}"
            android:background="@drawable/trending_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>